[package]
name = "playcaster"
description = "🎥 Turn any playlist into a Podcast feed"
version = "0.0.2"
license = "MIT OR Apache-2.0"
authors = ["Jessica Stokes <hello@jessicastokes.net>"]
homepage = "https://github.com/ticky/playcaster"
repository = "https://github.com/ticky/playcaster.git"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
chrono = "0.4"
env_logger = "0.9"
hhmmss = "0.1"
itertools = "0.10"
log = "0.4"
rss = { version = "2.0", features = ["validation"] }
serde = "1.0"
serde_json = "1.0"
structopt = "0.3"
thiserror = "1.0"
youtube_dl = { version = "0.7", default_features = false, features = ["yt-dlp"] }
url = { version = "2.2", features = ["serde"] }
