[package]
name = "playcaster"
description = "🎥 Turn any playlist into a Podcast feed"
version = "0.0.3"
license = "MIT OR Apache-2.0"
authors = ["Jessica Stokes <hello@jessicastokes.net>"]
homepage = "https://github.com/ticky/playcaster"
repository = "https://github.com/ticky/playcaster.git"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0", features = ["backtrace"] }
chrono = "0.4"
clap = { version = "4.1", features = ["derive"] }
env_logger = "0.10"
hhmmss = "0.1"
itertools = "0.10"
log = "0.4"
rss = { version = "2.0", features = ["validation"] }
serde = "1.0"
serde_json = "1.0"
thiserror = "1.0"
youtube_dl = "0.9"
url = { version = "2.3", features = ["serde"] }
